--- a/templates/correct.html
+++ b/templates/correct.html
@@ -21,10 +21,11 @@
 </style>
 
 <div class="container">
-    <h1>My First PROPER (with responsive) Cloud based Web Application</h1>
+    <h1>Congratulation. Your answer is correct.</h1>
     <form action="/main" method="post">
-        <p><h2>Welcome to Hugging Face Ethical Test, my name is thousand Ask. May I know your name?</h2></p>
-        <p><input type="text" name="name"></p>
-        <p><input type="submit" value="Enter"></p>
+        <p><input type="submit" value="main"></p>
     </form>
+    <form action="/end" method="post">
+        <p><input type="submit" value="End"></p>
+   </form>
 </div>
