--- a/templates/end.html
+++ b/templates/end.html
@@ -21,10 +21,5 @@
 </style>
 
 <div class="container">
-    <h1>My First PROPER (with responsive) Cloud based Web Application</h1>
-    <form action="/main" method="post">
-        <p><h2>Welcome to Hugging Face Ethical Test, my name is thousand Ask. May I know your name?</h2></p>
-        <p><input type="text" name="name"></p>
-        <p><input type="submit" value="Enter"></p>
-    </form>
+    <h1>Thank you for visiting us, Goodbye and see you again</h1>
 </div>
