--- a/templates/main.html
+++ b/templates/main.html
@@ -21,10 +21,11 @@
 </style>
 
 <div class="container">
-    <h1>My First PROPER (with responsive) Cloud based Web Application</h1>
-    <form action="/main" method="post">
-        <p><h2>Welcome to Hugging Face Ethical Test, my name is thousand Ask. May I know your name?</h2></p>
-        <p><input type="text" name="name"></p>
-        <p><input type="submit" value="Enter"></p>
+    <h1>Hi {{name}}, how can I help you today?</h1>
+    <form action="/ethical_test" method="post">
+        <p><input type="submit" value="Ethical Test"></p>
     </form>
+    <form action="/end" method="post">
+        <p><input type="submit" value="End"></p>
+   </form>
 </div>
